--- a/components/AutoCover/autoCover.module.css
+++ b/components/AutoCover/autoCover.module.css
@@ -63,6 +63,7 @@
     opacity: 1;
 }
 .subtitle {
+    padding-right: 60px;
     width: 462px;
     height: 22px;
     font-family: "Assistant", sans-serif;
@@ -76,6 +77,7 @@
 }
 
 .title {
+    padding-right: 60px;
     width: 462px;
     height: 105px;
     font-family: "Assistant", sans-serif;
@@ -90,8 +92,9 @@
     margin: 0;
 }
 
-.ctaRow { margin-top: 8px; display: flex; justify-content: flex-end; }
+.ctaRow { margin-top: 8px; display: flex; justify-content: flex-end; padding-right: 60px;}
 .primaryCta {
+    
     width: 184px;
     height: 52px;
     padding: 4px 32px 4px 4px;
@@ -118,10 +121,11 @@
 }
 
 .description {
+    padding-right: 20px;
     position: absolute;
     width: 603px;
     height: 42px;
-    top: 1250px;
+    top: 1200px;
     left: 790px;
     font-family: "Assistant", sans-serif;
     font-weight: 400;
