--- a/components/AutoCover/autoCover.module.css
+++ b/components/AutoCover/autoCover.module.css
@@ -13,7 +13,7 @@
     display: grid;
     grid-template-columns: 1.2fr 1fr;
     align-items: center;
-    background: linear-gradient(0deg, rgba(0,0,0,0.08), rgba(0,0,0,0.08)), url('/images/road-bg.jpg');
+    /* background: linear-gradient(0deg, rgba(0,0,0,0.08), rgba(0,0,0,0.08)), url('/images/road-bg.jpg'); */
     background-size: cover;
     background-position: center;
     /* padding: 24px 32px; */
